--- a/web-ui/web-v0.7.1/job-detail.html
+++ b/web-ui/web-v0.7.1/job-detail.html
@@ -4,16 +4,20 @@
 <head>
     <title>Thông tin tuyển dụng</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href=".\css\style.css">
-    <link rel="stylesheet" href=".\css\job-recruit-alternative.css">
+    <link rel="stylesheet"
+          href=".\css\style.css">
+    <link rel="stylesheet"
+          href=".\css\job-recruit-alternative.css">
 </head>
 
 <body onload="getRecruitmentById(5)">
@@ -31,30 +35,44 @@
     </script>
 
     <!-- Header -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height: 45px">
-        <a class="navbar-brand" href=".\index.html">
-            <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png" width="90"
-                height="27" class="d-inline-block align-top" alt="CTSA logo">
-        </a>
 
-        <div class="collapse navbar-collapse  justify-content-center  menu" id="navbarSupportedContent">
-            <a class="mx-5" href="#">Tuyển Dụng</a>
-            <a class="mx-5" href=".\graph.html">Thống Kê</a>
-            <a class="mx-5" href="#">Tuyển Dụng</a>
-            <a class="mx-5" href="#">Thống Kê</a>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark"
+         style="height: 45px">
+        <a class="navbar-brand"
+           href=".\index.html">
+            <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png"
+                 width="90"
+                 height="27"
+                 class="d-inline-block align-top"
+                 alt="CTSA logo">
+        </a>
+        <span class="title-header">Career Trend Suggestions</span>
+
+        <div class="collapse navbar-collapse  justify-content-center  menu">
+            <!-- <a class="mx-5"
+           href="#">Tuyển Dụng</a>
+        <a class="mx-5"
+           href=".\graph.html">Thống Kê</a>
+        <a class="mx-5"
+           href="#">Tuyển Dụng</a>
+        <a class="mx-5"
+           href="#">Thống Kê</a> -->
 
         </div>
         <span class="fa-stack">
-            <i class="	fa fa-user-circle-o fa-stack-1x" style="font-size:36px; color:white"></i>
+            <i class="	fa fa-user-circle-o fa-stack-1x"
+               style="font-size:36px; color:white"></i>
         </span>
     </nav>
     <!-- End of Header -->
 
     <div class="container-fluid">
-        <div id="content" class="tab-content col-md-12 folder">
+        <div id="content"
+             class="tab-content col-md-12 folder">
             <div class="top-background">
                 <div class="row justify-content-center">
-                    <div style="background-color: white; margin-top:-50px; border-radius:20px" id="company-logo">
+                    <div style="background-color: white; margin-top:-50px; border-radius:20px"
+                         id="company-logo">
                     </div>
                 </div>
                 <div class="row">
@@ -93,27 +111,35 @@
                     <div class="job-detail1 col-md-4">
                         <div class="text-center">
                             <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237108/demo-image/question.png"
-                                alt="" width="50" width="50"><br><br>
+                                 alt=""
+                                 width="50"
+                                 width="50"><br><br>
                             <h2>Mô tả công việc</h2>
                             <hr>
                         </div>
-                        <div id="job-description" class="text-justify">
+                        <div id="job-description"
+                             class="text-justify">
                         </div>
                     </div>
                     <div class="job-detail2 col-md-4">
                         <div class="text-center">
                             <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237111/demo-image/requirement.png"
-                                alt="" width="50" width="50"><br><br>
+                                 alt=""
+                                 width="50"
+                                 width="50"><br><br>
                             <h2>Yêu cầu công việc</h2>
                             <hr>
                         </div>
-                        <div id="job-requirement" class="text-justify">
+                        <div id="job-requirement"
+                             class="text-justify">
                         </div>
                     </div>
                     <div class="job-detail3 col-md-4">
                         <div class="text-center">
                             <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237112/demo-image/skill.png"
-                                alt="" width="50" width="50"><br><br>
+                                 alt=""
+                                 width="50"
+                                 width="50"><br><br>
                             <h2>Kỹ năng cần thiết</h2>
                             <hr>
                         </div>
@@ -127,7 +153,9 @@
                     <div class="job-detail1 col-md-6">
                         <div class="text-center">
                             <h2><img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541484328/contact.png"
-                                    alt="" width="50" width="50"> Liên hệ</h2>
+                                     alt=""
+                                     width="50"
+                                     width="50"> Liên hệ</h2>
                             <hr>
                         </div>
                         <div class="text-justify">
@@ -137,10 +165,13 @@
                     <div class="job-detail3 col-md-6">
                         <div class="text-center">
                             <h2><img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541477752/demo-image/info.png"
-                                alt="" width="50" width="50"> Thông tin thêm</h2>
+                                     alt=""
+                                     width="50"
+                                     width="50"> Thông tin thêm</h2>
                             <hr>
                         </div>
-                        <div class="text-justify" id="job-info">
+                        <div class="text-justify"
+                             id="job-info">
                         </div>.
                     </div>
                 </div>
