--- a/web-ui/web-v0.7.1/job-list.html
+++ b/web-ui/web-v0.7.1/job-list.html
@@ -4,15 +4,19 @@
 <head>
     <title>Danh sách tuyển dụng</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/listjob.css">
+    <link rel="stylesheet"
+          href="./css/style.css">
+    <link rel="stylesheet"
+          href="./css/listjob.css">
 </head>
 
 <body onload="getListRecruitment()">
@@ -32,27 +36,40 @@
         </script>
 
         <!-- Header -->
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height: 45px">
-            <a class="navbar-brand" href="./index.html">
-                <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png"
-                    width="90" height="27" class="d-inline-block align-top" alt="CTSA logo">
-            </a>
 
-            <div class="collapse navbar-collapse  justify-content-center  menu" id="navbarSupportedContent">
-                <a class="mx-5" href="#">Tuyển Dụng</a>
-                <a class="mx-5" href="./graph.html">Thống Kê</a>
-                <a class="mx-5" href="#">Tuyển Dụng</a>
-                <a class="mx-5" href="#">Thống Kê</a>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark"
+             style="height: 45px">
+            <a class="navbar-brand"
+               href=".\index.html">
+                <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png"
+                     width="90"
+                     height="27"
+                     class="d-inline-block align-top"
+                     alt="CTSA logo">
+            </a>
+            <span class="title-header">Career Trend Suggestions</span>
+
+            <div class="collapse navbar-collapse  justify-content-center  menu">
+                <!-- <a class="mx-5"
+          href="#">Tuyển Dụng</a>
+       <a class="mx-5"
+          href=".\graph.html">Thống Kê</a>
+       <a class="mx-5"
+          href="#">Tuyển Dụng</a>
+       <a class="mx-5"
+          href="#">Thống Kê</a> -->
 
             </div>
             <span class="fa-stack">
-                <i class="fa fa-user-circle-o fa-stack-1x" style="font-size:36px; color:white"></i>
+                <i class="	fa fa-user-circle-o fa-stack-1x"
+                   style="font-size:36px; color:white"></i>
             </span>
         </nav>
         <!-- End of Header -->
         <div class="container-fluid">
 
-            <div id="content" class="tab-content col-md-12 folder">
+            <div id="content"
+                 class="tab-content col-md-12 folder">
                 <h1 class="text-center pt-3 pb-2">TIN TUYỂN DỤNG</h1>
                 <div class="row">
                     <div class="col-md-12 list-jobs">
