--- a/web-ui/web-v0.7.1/partner-registration.html
+++ b/web-ui/web-v0.7.1/partner-registration.html
@@ -28,7 +28,7 @@
           href=".\css\partner-registration.css">
 
     <style>
-        
+
     </style>
 
     <link href="assets/css/style.css"
@@ -49,27 +49,29 @@
             $('#loader').hide();
         });
     </script>
+    <!-- Header -->
+
     <nav class="navbar navbar-expand-md navbar-dark bg-dark"
          style="height: 45px">
         <a class="navbar-brand"
            href=".\index.html">
             <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png"
                  width="90"
-                 height="30"
+                 height="27"
                  class="d-inline-block align-top"
                  alt="CTSA logo">
         </a>
+        <span class="title-header">Career Trend Suggestions</span>
 
-        <div class="collapse navbar-collapse justify-content-center menu "
-             id="navbarSupportedContent">
-            <a class="mx-5"
-               href="#">Tuyển Dụng</a>
-            <a class="mx-5"
-               href=".\graph.html">Thống Kê</a>
-            <a class="mx-5"
-               href="#">Tuyển Dụng</a>
-            <a class="mx-5"
-               href="#">Thống Kê</a>
+        <div class="collapse navbar-collapse  justify-content-center  menu">
+            <!-- <a class="mx-5"
+           href="#">Tuyển Dụng</a>
+        <a class="mx-5"
+           href=".\graph.html">Thống Kê</a>
+        <a class="mx-5"
+           href="#">Tuyển Dụng</a>
+        <a class="mx-5"
+           href="#">Thống Kê</a> -->
 
         </div>
         <span class="fa-stack">
@@ -187,7 +189,7 @@
             </div>
         </div>
     </div>
-    
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
