--- a/web-ui/web-v0.7.1/result.html
+++ b/web-ui/web-v0.7.1/result.html
@@ -42,31 +42,34 @@
         <div class="spinner"></div>
     </div>
     <script>
-       $(window).ready(function () {
+        $(window).ready(function () {
             $('#loader').hide();
         });
     </script>
     <!-- Header -->
+
     <nav class="navbar navbar-expand-md navbar-dark bg-dark"
          style="height: 45px">
         <a class="navbar-brand"
            href=".\index.html">
             <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png"
                  width="90"
-                 height="30"
+                 height="27"
                  class="d-inline-block align-top"
                  alt="CTSA logo">
         </a>
-        <div class="collapse navbar-collapse justify-content-center menu "
-             id="navbarSupportedContent">
-            <a class="mx-5"
-               href="#">Tuyển Dụng</a>
-            <a class="mx-5"
-               href=".\graph.html">Thống Kê</a>
-            <a class="mx-5"
-               href="#">Tuyển Dụng</a>
-            <a class="mx-5"
-               href="#">Thống Kê</a>
+        <span class="title-header">Career Trend Suggestions</span>
+
+        <div class="collapse navbar-collapse  justify-content-center  menu">
+            <!-- <a class="mx-5"
+           href="#">Tuyển Dụng</a>
+        <a class="mx-5"
+           href=".\graph.html">Thống Kê</a>
+        <a class="mx-5"
+           href="#">Tuyển Dụng</a>
+        <a class="mx-5"
+           href="#">Thống Kê</a> -->
+
         </div>
         <span class="fa-stack">
             <i class="	fa fa-user-circle-o fa-stack-1x"
