--- a/web-ui/web-v0.7.1/recruitment-form.html
+++ b/web-ui/web-v0.7.1/recruitment-form.html
@@ -33,7 +33,7 @@
         <div class="spinner"></div>
     </div>
     <script>
-       $(window).ready(function () {
+        $(window).ready(function () {
             $('#loader').hide();
         });
     </script>
@@ -45,21 +45,21 @@
            href=".\index.html">
             <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png"
                  width="90"
-                 height="30"
+                 height="27"
                  class="d-inline-block align-top"
                  alt="CTSA logo">
         </a>
+        <span class="title-header">Career Trend Suggestions</span>
 
-        <div class="collapse navbar-collapse justify-content-center menu "
-             id="navbarSupportedContent">
-            <a class="mx-5"
-               href="#">Tuyển Dụng</a>
-            <a class="mx-5"
-               href=".\graph.html">Thống Kê</a>
-            <a class="mx-5"
-               href="#">Tuyển Dụng</a>
-            <a class="mx-5"
-               href="#">Thống Kê</a>
+        <div class="collapse navbar-collapse  justify-content-center  menu">
+            <!-- <a class="mx-5"
+           href="#">Tuyển Dụng</a>
+        <a class="mx-5"
+           href=".\graph.html">Thống Kê</a>
+        <a class="mx-5"
+           href="#">Tuyển Dụng</a>
+        <a class="mx-5"
+           href="#">Thống Kê</a> -->
 
         </div>
         <span class="fa-stack">
