--- a/web-ui/web-v0.7.1/summary-2-tab.html
+++ b/web-ui/web-v0.7.1/summary-2-tab.html
@@ -3,22 +3,30 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible"
+        content="IE=edge">
   <title>(Company Name)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <!-- <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">  -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href=".\css\style.css">
-  <link rel="stylesheet" href=".\css\tab.css">
-  <link rel="stylesheet" href="./css/sweetalert2.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans"
+        rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        rel="stylesheet">
+  <link rel="stylesheet"
+        href=".\css\style.css">
+  <link rel="stylesheet"
+        href=".\css\tab.css">
+  <link rel="stylesheet"
+        href="./css/sweetalert2.min.css">
 </head>
 
 
@@ -36,39 +44,59 @@
   </script>
 
   <!-- Header -->
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height: 45px">
-    <a class="navbar-brand" href=".\index.html">
-      <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png" width="90"
-        height="30" class="d-inline-block align-top" alt="CTSA logo">
-    </a>
 
-    <div class="collapse navbar-collapse justify-content-center menu " id="navbarSupportedContent">
-      <a class="mx-5" href="#">Tuyển Dụng</a>
-      <a class="mx-5" href=".\graph.html">Thống Kê</a>
-      <a class="mx-5" href="#">Tuyển Dụng</a>
-      <a class="mx-5" href="#">Thống Kê</a>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark"
+       style="height: 45px">
+    <a class="navbar-brand"
+       href=".\index.html">
+      <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png"
+           width="90"
+           height="27"
+           class="d-inline-block align-top"
+           alt="CTSA logo">
+    </a>
+    <span class="title-header">Career Trend Suggestions</span>
+
+    <div class="collapse navbar-collapse  justify-content-center  menu">
+      <!-- <a class="mx-5"
+         href="#">Tuyển Dụng</a>
+      <a class="mx-5"
+         href=".\graph.html">Thống Kê</a>
+      <a class="mx-5"
+         href="#">Tuyển Dụng</a>
+      <a class="mx-5"
+         href="#">Thống Kê</a> -->
 
     </div>
     <span class="fa-stack">
-      <i class="	fa fa-user-circle-o fa-stack-1x" style="font-size:36px; color:white"></i>
+      <i class="	fa fa-user-circle-o fa-stack-1x"
+         style="font-size:36px; color:white"></i>
     </span>
   </nav>
   <!-- End of Header -->
 
   <div class="container-fluid">
     <div class="row">
-      <ul class="nav col-md-12" id="myTab" role="tablist">
-        <li class="nav-item tab tabactive col-md-4" id="tab-published">
-          <a class="nav-link active" href="#list-published">Tin đã đăng</a>
+      <ul class="nav col-md-12"
+          id="myTab"
+          role="tablist">
+        <li class="nav-item tab tabactive col-md-4"
+            id="tab-published">
+          <a class="nav-link active"
+             href="#list-published">Tin đã đăng</a>
         </li>
-        <li class="nav-item tab col-md-4" id="tab-unpublished">
-          <a class="nav-link" href="#list-unpublished">Tin chưa công bố</a>
+        <li class="nav-item tab col-md-4"
+            id="tab-unpublished">
+          <a class="nav-link"
+             href="#list-unpublished">Tin chưa công bố</a>
         </li>
       </ul>
     </div>
     <div class="row">
-      <div id="content" class="tab-content col-md-12 folder">
-        <div class="tab-pane fade show active" id="list-published">
+      <div id="content"
+           class="tab-content col-md-12 folder">
+        <div class="tab-pane fade show active"
+             id="list-published">
           <table class="table table-striped">
             <thead>
               <tr>
@@ -84,7 +112,8 @@
             </tbody>
           </table>
         </div>
-        <div class="tab-pane fade" id="list-unpublished">
+        <div class="tab-pane fade"
+             id="list-unpublished">
           <table class="table table-striped">
             <thead>
               <tr>
